Initial commit: ng-job-search project setup

--- a/angular.json
+++ b/angular.json
@@ -26,6 +26,7 @@
               "src/mockServiceWorker.js"
             ],
             "styles": [
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css"
             ],
             "scripts": []
@@ -35,7 +36,7 @@
               "budgets": [
                 {
                   "type": "initial",
-                  "maximumWarning": "500kb",
+                  "maximumWarning": "650kb",
                   "maximumError": "1mb"
                 },
                 {
@@ -92,5 +93,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "4e5aecdc-2959-4d72-aaf1-0389dc8979e5"
   }
 }
